# Homomorphic-Encryption

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: he.h  random.h  timer.h
src/: he.cpp  random.cpp
